Fix content padding issues on firefox and edge

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -14,6 +14,7 @@
   flex: 1;
   overflow: hidden;
   padding: 0 Rem(60) Rem(120);
+  margin-bottom: Rem(100);
   @media (min-width: $screen-sm-min) {
     overflow: auto;
   }
